<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@android:id/list">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_launcher"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="@dimen/add_event_text_size"
                  android:text="@string/add_event"/>
    </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/event_label" android:textSize="@dimen/add_event_text_label"/>
            <EditText  android:id="@+id/add_event_title" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/event_photo_label" android:textSize="@dimen/add_event_photo_label"/>
            <ImageView android:id="@+id/add_event_image" android:layout_width="200dp" android:layout_height="200dp" android:src="@drawable/ic_launcher" android:layout_gravity="center_horizontal" android:onClick="captureImageStart"/>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/add_event_text_label" android:text="@string/publish" android:background="@android:color/white" android:onClick="publishEvent"/>
        </LinearLayout>
</LinearLayout>