<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/darker_gray"
        >
    <LinearLayout android:layout_width="wrap_content"
                  android:orientation="vertical"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center">
        <EditText android:padding="@dimen/login_padding"
                  android:id="@+id/email_input"
                  android:layout_width="@dimen/email_width"
                  android:layout_height="@dimen/email_height" android:background="@android:color/white"
                  android:inputType="textEmailAddress"
                  android:gravity="center"
                  android:layout_gravity="center_horizontal" android:hint="@string/email_hint"/>

        <EditText android:padding="@dimen/login_padding"
                  android:gravity="center"
                  android:layout_margin="@dimen/loginForm_margin"
                  android:id="@+id/password_input" android:layout_width="@dimen/email_width"
                  android:layout_height="@dimen/email_height" android:background="@android:color/white"
                  android:inputType="textPassword" android:layout_gravity="center_horizontal"
                  android:hint="@string/password_hint"/>
        <Button android:id="@+id/loginButton" android:layout_width="@dimen/loginButton_width"
                android:layout_height="@dimen/loginButton_height"
                android:text="@string/loginButton_text"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:onClick="handleLoginClick"/>
    </LinearLayout>
</FrameLayout>